<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.apache.cassandra</groupId>
    <artifactId>reproducer</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <name>reproducer</name>
    <properties>
        <maven.shade.plugin.version>3.1.1</maven.shade.plugin.version>
        <maven.source.plugin.version>3.1.0</maven.source.plugin.version>
        <maven.gpg.plugin.version>1.6</maven.gpg.plugin.version>
        <maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
        <maven.javadoc.plugin.version>3.1.1</maven.javadoc.plugin.version>
        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
        <outputDirectory>${project.build.directory}</outputDirectory>

        <java.version>11</java.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.30</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.18</version>
        </dependency>

        <dependency>
            <groupId>org.apache.cassandra</groupId>
            <artifactId>cassandra-analytics-core_spark3_2.12</artifactId>
            <version>0.1.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.cassandra</groupId>
            <artifactId>cassandra-analytics-integration-framework_spark3_2.12</artifactId>
            <version>0.1.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.cassandra</groupId>
            <artifactId>cassandra-analytics-integration-tests_spark3_2.12</artifactId>
            <version>0.1.0</version>
            <scope>test</scope>
            <classifier>test</classifier>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.12</artifactId>
            <version>3.2.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <argLine>
                        -DSKIP_STARTUP_VALIDATIONS=true
                        -Dfile.encoding=UTF-8 -Djdk.attach.allowAttachSelf=true
                        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                        --add-exports java.base/sun.nio.ch=ALL-UNNAMED
                        --add-exports t.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED
                        --add-exports java.rmi/sun.rmi.registry=ALL-UNNAMED
                        --add-exports java.rmi/sun.rmi.server=ALL-UNNAMED
                        --add-exports java.sql/java.sql=ALL-UNNAMED
                        --add-opens java.base/java.lang.module=ALL-UNNAMED
                        --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
                        --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
                        --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
                        --add-opens java.base/jdk.internal.math=ALL-UNNAMED
                        --add-opens java.base/jdk.internal.module=ALL-UNNAMED
                        --add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED
                        --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
